--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.2.3"
+    "axios": "^1.2.3",
+    "react-redux": "^8.0.5",
+    "react-hook-form": "^7.43.1",
+    "@reduxjs/toolkit": "^1.9.2",
+    "@hookform/resolvers": "^2.9.11",
+    "joi": "^17.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
